--- a/src/e_cidadania/apps/accounts/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,123 +2,126 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-08-12 20:26\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: models.py:33
 msgid "Male"
-msgstr ""
+msgstr "Home"
 
 #: models.py:34
 msgid "Female"
-msgstr ""
+msgstr "Muller"
 
 #: models.py:42
 msgid "Interes"
-msgstr ""
+msgstr "Interes"
 
 #: models.py:54
 msgid "Name"
-msgstr ""
+msgstr "Nome"
 
 #: models.py:55
 msgid "Surname"
-msgstr ""
+msgstr "Apelido"
 
 #: models.py:56
 msgid "Gender"
-msgstr ""
+msgstr "Xénero"
 
 #: models.py:59
 msgid "Birth date"
-msgstr ""
+msgstr "Data de nacemento"
 
 #: models.py:63
 msgid "Province"
-msgstr ""
+msgstr "Provincia"
 
 #: models.py:64
 msgid "Region"
-msgstr ""
+msgstr "Rexión"
 
 #: models.py:65
 msgid "Neighborhood"
-msgstr ""
+msgstr "Barrio"
 
 #: models.py:68
 msgid "Address"
-msgstr ""
+msgstr "Dirección"
 
 #: models.py:69
 msgid "Number"
-msgstr ""
+msgstr "Número"
 
 #: models.py:71
 msgid "Floor"
-msgstr ""
+msgstr "Piso"
 
 #: models.py:72
 msgid "Letter"
-msgstr ""
+msgstr "Letra"
 
 #: models.py:75
 msgid "Phone 1"
-msgstr ""
+msgstr "Teléfono 1"
 
 #: models.py:76 models.py:78
 msgid "9 digits maximum"
-msgstr ""
+msgstr "9 díxitos máximo"
 
 #: models.py:77
 msgid "Phone 2"
-msgstr ""
+msgstr "Teléfono 2"
 
 #: models.py:80
 msgid "Identification document"
-msgstr ""
+msgstr "Documento de identificación"
 
 #: models.py:83
 msgid "Website"
-msgstr ""
+msgstr "Páxina web"
 
 #: models.py:85
 msgid "The URL will be checked"
-msgstr ""
+msgstr "A dirección se comprobará"
 
 #: templates/accounts/login.html:4
 msgid "Login"
-msgstr ""
+msgstr "Entrar"
 
 #: templates/accounts/login.html:14
 msgid "Username:"
-msgstr ""
+msgstr "Nome de usuario:"
 
 #: templates/accounts/login.html:17
 msgid "Password:"
-msgstr ""
+msgstr "Contrasinal:"
 
 #: templates/accounts/logout.html:7
 msgid ""
-"Thanks for using e-cidadania. Now you can continue visting the website or "
-"log in again."
+"Thanks for using e-cidadania. Now you can continue visting the website "
+"or log in again."
 msgstr ""
+"Grazas por usar e-cidadania. Agora podes continuar visitando a web ou "
+"volver a entrar."
 
 #: templates/accounts/logout.html:9
 msgid "Login again"
-msgstr ""
+msgstr "Volver a entrar"
 
 #: templates/accounts/profile.html:5
 msgid "User"
-msgstr ""
+msgstr "Usuario"
