--- a/src/e_cidadania/apps/cal/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/cal/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,57 +2,58 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-08-12 12:08\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: templates/cal/calendar.html:4 templates/cal/calendar.html.py:14
 msgid "Calendar"
-msgstr ""
+msgstr "Calendario"
 
 #: templates/cal/calendar.html:21
 msgid "Previous month"
-msgstr ""
+msgstr "Mes anterior"
 
 #: templates/cal/calendar.html:22
 msgid "Next month"
-msgstr ""
+msgstr "Mes seguinte"
 
 #: templates/cal/calendar.html:23
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/cal/error.html:4
 msgid "Calendar error"
-msgstr ""
+msgstr "Error do calendario"
 
 #: templates/cal/error.html:8
 msgid "You entered and incorrect month or year. Please correct it."
-msgstr ""
+msgstr "Introduciu un ano ou mes incorrectos. Por favor corríxao."
 
 #: templates/cal/error.html:10
 msgid "You can go"
-msgstr ""
+msgstr "Podes ir"
 
 #: templates/cal/error.html:10
 msgid "back to home"
-msgstr ""
+msgstr "de volta ao inicio"
 
 #: templates/cal/error.html:10
 msgid "or"
-msgstr ""
+msgstr "ou"
 
 #: templates/cal/error.html:10
 msgid "back to your profile"
-msgstr ""
+msgstr "de volta ao teu perfil"
