--- a/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/proposals/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,93 +2,94 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-08-12 20:18\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:45
 msgid "Location"
-msgstr ""
+msgstr "Lugar"
 
 #: admin.py:48
 msgid "Relations"
-msgstr ""
+msgstr "Relacions"
 
 #: admin.py:51
 msgid "Other"
-msgstr ""
+msgstr "Outros"
 
 #: admin.py:54
 msgid "Options"
-msgstr ""
+msgstr "Opcions"
 
 #: models.py:37
 msgid "Economically not viable"
-msgstr ""
+msgstr "Economicamente non viable"
 
 #: models.py:38
 msgid "Legally not viable"
-msgstr ""
+msgstr "Legalmente non viable"
 
 #: models.py:39
 msgid "Technically not viable"
-msgstr ""
+msgstr "Técnicamente non viable"
 
 #: models.py:40
 msgid "Offtopic"
-msgstr ""
+msgstr "Fora de tópico"
 
 #: models.py:48 models.py:81 templates/proposals/proposal_add.html:21
 #: templates/proposals/proposal_add.html:72
 #: templates/proposals/proposal_edit.html:27
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
 #: models.py:79
 msgid "Code"
-msgstr ""
+msgstr "Código"
 
 #: models.py:82 templates/proposals/proposal_add.html:28
 #: templates/proposals/proposal_add.html:73
 #: templates/proposals/proposal_edit.html:34
 msgid "Description"
-msgstr ""
+msgstr "Descrición"
 
 #: models.py:88 templates/proposals/proposal_add.html:35
 #: templates/proposals/proposal_edit.html:41
 msgid "Latitude"
-msgstr ""
+msgstr "Latitude"
 
 #: models.py:90 templates/proposals/proposal_add.html:41
 #: templates/proposals/proposal_edit.html:47
 msgid "Longitude"
-msgstr ""
+msgstr "Lonxitude"
 
 #: models.py:115
 msgid "Proposal"
-msgstr ""
+msgstr "Proposta"
 
 #: models.py:116
 msgid "Proposals"
-msgstr ""
+msgstr "Propostas"
 
 #: templates/proposals/proposal_add.html:5
 #: templates/proposals/proposal_add.html:13
 #: templates/proposals/proposal_detail.html:17
 #: templates/proposals/proposal_list.html:17
 msgid "Add proposal"
-msgstr ""
+msgstr "Engadir proposta"
 
 #: templates/proposals/proposal_add.html:35
 #: templates/proposals/proposal_add.html:41
@@ -97,115 +98,124 @@ msgstr ""
 #: templates/proposals/proposal_edit.html:47
 #: templates/proposals/proposal_edit.html:53
 msgid "(optional)"
-msgstr ""
+msgstr "(opcional)"
 
 #: templates/proposals/proposal_add.html:47
 #: templates/proposals/proposal_add.html:75
 #: templates/proposals/proposal_edit.html:53
 msgid "Tags"
-msgstr ""
+msgstr "Etiquetas"
 
 #: templates/proposals/proposal_add.html:57
 #: templates/proposals/proposal_edit.html:64
 msgid "Create"
-msgstr ""
+msgstr "Crear"
 
 #: templates/proposals/proposal_add.html:58
 #: templates/proposals/proposal_confirm_delete.html:23
 #: templates/proposals/proposal_edit.html:65
 msgid "Cancel"
-msgstr ""
+msgstr "Cancelar"
 
 #: templates/proposals/proposal_add.html:67
 msgid "Admins/moderators read this"
-msgstr ""
+msgstr "Admins/moderadores leede isto"
 
 #: templates/proposals/proposal_add.html:68
 msgid ""
-"There are a lot more options in the proposals but they will appear only when "
-"you edit the proposal."
+"There are a lot more options in the proposals but they will appear only"
+" when you edit the proposal."
 msgstr ""
+"Hai moitas mais opcións nas propostas das que se mostran, pero "
+"aparecerán sólo cando se edite a proposta."
 
 #: templates/proposals/proposal_add.html:70
 msgid "How to add new proposals"
-msgstr ""
+msgstr "Cómo engadir propostas"
 
 #: templates/proposals/proposal_add.html:72
 msgid "Title resuming the proposal, be concise (50 characters)"
-msgstr ""
+msgstr "Título resumindo a proposta, sexa conciso (50 caracteres)"
 
 #: templates/proposals/proposal_add.html:73
 msgid ""
-"Describe here your proposal with detail. You can add images or any other "
-"content."
+"Describe here your proposal with detail. You can add images or any "
+"other content."
 msgstr ""
+"Describe a túa proposta con detalle. Podes engadir imaxes ou outro "
+"tipo de contido."
 
 #: templates/proposals/proposal_add.html:74
 msgid "Latitude/Longitude"
-msgstr ""
+msgstr "Latitude/Lonxitude"
 
 #: templates/proposals/proposal_add.html:74
 msgid "You'll have to put this if you want to locate the proposal in a map."
-msgstr ""
+msgstr "Terás que por isto se queres localizar a túa proposta nun mapa"
 
 #: templates/proposals/proposal_add.html:75
 msgid ""
-"Relevant tags for the proposal, p.e. where the proposal is localted, what is "
-"related to it, etc."
+"Relevant tags for the proposal, p.e. where the proposal is localted, "
+"what is related to it, etc."
 msgstr ""
+"Etiquetas relevantes para a proposta, por exemplo, onde está, cousas "
+"relacionadas, etc."
 
 #: templates/proposals/proposal_confirm_delete.html:4
 #: templates/proposals/proposal_confirm_delete.html:14
 msgid "Delete proposal"
-msgstr ""
+msgstr "Eliminar proposta"
 
 #: templates/proposals/proposal_confirm_delete.html:18
 msgid ""
-"Are you sure you want to delete this proposal? This action cannot be undone."
+"Are you sure you want to delete this proposal? This action cannot be "
+"undone."
 msgstr ""
+"Está seguro de querer eliminar esta proposta? Esta acción non se pode "
+"desfacer."
 
 #: templates/proposals/proposal_confirm_delete.html:22
 #: templates/proposals/proposal_detail.html:22
 #: templates/proposals/proposal_list.html:22
 msgid "Delete"
-msgstr ""
+msgstr "Eliminar"
 
 #: templates/proposals/proposal_detail.html:5
 msgid "View proposal"
-msgstr ""
+msgstr "Ver proposta"
 
 #: templates/proposals/proposal_detail.html:19
 #: templates/proposals/proposal_list.html:19
 msgid "Edit"
-msgstr ""
+msgstr "Editar"
 
 #: templates/proposals/proposal_detail.html:33
 #: templates/proposals/proposal_list.html:34
 msgid "proposed by "
-msgstr ""
+msgstr "proposto por"
 
 #: templates/proposals/proposal_detail.html:33
 #: templates/proposals/proposal_list.html:34
 msgid " at "
-msgstr ""
+msgstr "as"
 
 #: templates/proposals/proposal_edit.html:5
 #: templates/proposals/proposal_edit.html:13
 msgid "Edit proposal"
-msgstr ""
+msgstr "Editar proposta"
 
 #: templates/proposals/proposal_list.html:5
 msgid "View proposals"
-msgstr ""
+msgstr "Ver propostas"
 
 #: templates/proposals/proposal_list.html:34
 msgid "comments"
-msgstr ""
+msgstr "comentarios"
 
 #: templates/proposals/proposal_list.html:43
 msgid "There are no proposals for this space."
-msgstr ""
+msgstr "Non existen propostas para este espazo."
 
 #: templates/proposals/proposal_list.html:49
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
