--- a/src/e_cidadania/apps/staticpages/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/staticpages/locale/gl_ES/LC_MESSAGES/django.po
@@ -2,65 +2,66 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
+# 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2011-08-12 12:09\n"
+"Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: \n"
+"X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: admin.py:39
 msgid "Description"
-msgstr ""
+msgstr "Descrición"
 
 #: admin.py:42
 msgid "Options"
-msgstr ""
+msgstr "Opcións"
 
 #: models.py:31
 msgid "Page Title"
-msgstr ""
+msgstr "Título da páxina"
 
 #: models.py:32
 msgid "URL"
-msgstr ""
+msgstr "URL"
 
 #: models.py:33
 msgid "Content"
-msgstr ""
+msgstr "Contido"
 
 #: models.py:34
 msgid "Show in footer"
-msgstr ""
+msgstr "Mostrar no pé de páxina"
 
 #: models.py:35
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: models.py:37
 msgid "Order"
-msgstr ""
+msgstr "Orde"
 
 #: models.py:41
 msgid "Static Pages"
-msgstr ""
+msgstr "Páxinas estáticas"
 
 #: templates/staticpages/staticpages_index.html:11
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/staticpages/staticpages_index.html:14
 msgid "created"
-msgstr ""
+msgstr "creado"
 
 #: templates/staticpages/staticpages_index.html:14
 msgid "by"
-msgstr ""
+msgstr "por"
