--- a/src/e_cidadania/apps/spaces/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/spaces/locale/gl_ES/LC_MESSAGES/django.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: 2011-08-12 11:46\n"
+"PO-Revision-Date: 2011-09-22 12:32\n"
 "Last-Translator:   <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -186,7 +186,7 @@ msgstr "Feed de %s"
 #, python-format
 msgid "All the recent events in %s including news, proposals, documents, etc. "
 msgstr ""
-"Todolos eventos recentes de %s incluindo noticias, propostas, "
+"Tódolos eventos recentes de %s incluíndo noticias, propostas, "
 "documentos, etc."
 
 #: views.py:158
@@ -197,9 +197,9 @@ msgid ""
 "must <a href=\"/accounts/register\">register</a>"
 "                                               to participate."
 msgstr ""
-"Ola usuario anónimo. Por favor, teña en conta que este espazo é "
-"público para ver, pero debe <a "
-"href=\"/accounts/register\">rexistrarse</a> para participar."
+"Ola usuario anónimo. Por favor, ten en conta que este espazo é público"
+" para ver, pero debes <a href=\"/accounts/register\">rexistrarte</a> "
+"para participar."
 
 #: views.py:165
 msgid ""
@@ -207,8 +207,8 @@ msgid ""
 "href=\"/accounts/register\">register</a>                           or <a "
 "href=\"/accounts/login\">login</a> to access here."
 msgstr ""
-"Vostede é un usuario anónimo. Debe <a "
-"href=\"/accounts/register\">rexistrarse</a> ou <a "
+"Ti es un usuario anónimo. Debes <a "
+"href=\"/accounts/register\">rexistrarte</a> ou <a "
 "href=\"/accounts/login\">entrar</a> para acceder aquí."
 
 #: views.py:175
@@ -268,7 +268,7 @@ msgstr "Cancelar"
 
 #: templates/spaces/document_add.html:51
 msgid "What can I upload?"
-msgstr "¿Qué podo cargar?"
+msgstr "Que podo cargar?"
 
 #: templates/spaces/document_add.html:53
 msgid "Allowed formats"
@@ -300,7 +300,7 @@ msgid ""
 "Are you sure you want to delete this document? This action cannot be "
 "undone."
 msgstr ""
-"¿Estás seguro de querer eliminar este documento? Esta acción non se "
+"Estás seguro de querer eliminar este documento? Esta acción non se "
 "pode desfacer."
 
 #: templates/spaces/document_confirm_delete.html:22
@@ -364,19 +364,19 @@ msgstr "Crear"
 
 #: templates/spaces/meeting_add.html:84
 msgid "How do meetings work?"
-msgstr "¿Cómo funcionan as reunións?"
+msgstr "Como funcionan as reunións?"
 
 #: templates/spaces/meeting_add.html:86
 msgid "A descriptive title of the meeting. Be concise."
-msgstr "Un título descriptivo para a reunión. Sexa conciso."
+msgstr "Un título descritivo para a reunión. Sé conciso."
 
 #: templates/spaces/meeting_add.html:87
 msgid "A short resume of the points treated in the meeting."
-msgstr "Un resumo corto dos puntos tratados na reunión."
+msgstr "Un resumo curto dos puntos tratados na reunión."
 
 #: templates/spaces/meeting_add.html:88
 msgid "Where does the meeting took place."
-msgstr "Onde tuvo lugar a reunión."
+msgstr "Onde tivo lugar a reunión."
 
 #: templates/spaces/meeting_add.html:89
 msgid "Type of meeting."
@@ -396,7 +396,7 @@ msgid ""
 "Are you sure you want to delete this meeting? This action cannot be "
 "undone."
 msgstr ""
-"¿Está seguro de querer eliminar esta reunión? Esta acción non se pode "
+"Está seguro de querer eliminar esta reunión? Esta acción non se pode "
 "desfacer."
 
 #: templates/spaces/meeting_detail.html:4
@@ -488,7 +488,7 @@ msgid ""
 "users, but to the admins."
 msgstr ""
 "Unha descrición opcional para o teu espazo. Non se mostrará aos "
-"usuarios, sólo aos admins."
+"usuarios, soamente aos admins."
 
 #: templates/spaces/space_add.html:102
 msgid "An image of 75px height and 100px width."
@@ -500,15 +500,15 @@ msgstr "Outra imaxe. 75px de alto."
 
 #: templates/spaces/space_add.html:104
 msgid "This will set up what users can access to your space."
-msgstr "Esto configurará que usuarios poden acceder ao teu espazo."
+msgstr "Isto configurará qué usuarios poden acceder ao teu espazo."
 
 #: templates/spaces/space_add.html:105
 msgid ""
 "Select the modules you will use in your space. This can be edited "
 "afterwards."
 msgstr ""
-"Selecciona os módulos que usarás no teu espazo. Esto pode editarse "
-"mais tarde."
+"Selecciona os módulos que usarás no teu espazo. Isto pode editarse "
+"máis tarde."
 
 #: templates/spaces/space_confirm_delete.html:4
 #: templates/spaces/space_index.html:26
@@ -530,7 +530,7 @@ msgstr "Editar espazo"
 
 #: templates/spaces/space_index.html:5
 msgid "Index"
-msgstr "Indice"
+msgstr "Índice"
 
 #: templates/spaces/space_index.html:17
 msgid "Add new post"
@@ -554,7 +554,7 @@ msgstr "comentarios"
 
 #: templates/spaces/space_index.html:59
 msgid "Nothing published yet."
-msgstr "Non hai nada publicado todavía."
+msgstr "Aínda non hai nada publicado."
 
 #: templates/spaces/space_index.html:94
 msgid "No documents available"
@@ -598,4 +598,4 @@ msgstr "Lista de espazos"
 
 #: templates/spaces/space_list.html:20
 msgid "There are no public spaces or spaces you are registered to."
-msgstr "Non hai espazos públicos ou nos que estés rexistrado."
+msgstr "Non hai espazos públicos ou nos que esteas rexistrado."
