--- a/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/es_ES/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: e-cidadania 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-07-26 17:46+0200\n"
+"POT-Creation-Date: 2011-10-10 09:34+0200\n"
 "PO-Revision-Date: 2011-07-27 11:47\n"
-"Last-Translator:   <a@a.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Last-Translator: <oscar.carballal@cidadania.coop.com>\n"
+"Language-Team: Spanish Team <ecidadania-es@freelists.org>\n"
+"Language: Spanish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
 #: models.py:33
@@ -97,31 +97,3 @@ msgstr "Página web"
 #: models.py:85
 msgid "The URL will be checked"
 msgstr "La URL se comprobará"
-
-#: templates/accounts/login.html:4
-msgid "Login"
-msgstr "Entrar"
-
-#: templates/accounts/login.html:14
-msgid "Username:"
-msgstr "Nombre de usuario:"
-
-#: templates/accounts/login.html:17
-msgid "Password:"
-msgstr "Contraseña:"
-
-#: templates/accounts/logout.html:7
-msgid ""
-"Thanks for using e-cidadania. Now you can continue visting the website "
-"or log in again."
-msgstr ""
-"Gracias por utilizar e-cidadania. Ahora puedes continuar visitando la "
-"web o entrar de nuevo."
-
-#: templates/accounts/logout.html:9
-msgid "Login again"
-msgstr "Entrar de nuevo"
-
-#: templates/accounts/profile.html:5
-msgid "User"
-msgstr "Usuario"
