--- a/src/e_cidadania/apps/debate/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/debate/locale/es_ES/LC_MESSAGES/django.po
@@ -6,90 +6,90 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: e-cidadania 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: 2011-07-27 11:04\n"
-"Last-Translator:   <a@a.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2011-10-10 09:34+0200\n"
+"PO-Revision-Date: 2011-10-10 10:10\n"
+"Last-Translator: <oscar.carballal@cidadania.coop>\n"
+"Language-Team: Spanish Team <ecidadania-es@freelists.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: \n"
 "X-Translated-Using: django-rosetta 0.6.0\n"
 
-#: models.py:40
+#: models.py:41 models.py:69
 msgid "Title"
 msgstr "Título"
-
-#: models.py:41
-msgid "Objectives"
-msgstr "Objetivos"
 
 #: models.py:42
 msgid "Description"
 msgstr "Descripción"
 
-#: models.py:58
-msgid "Phase number"
-msgstr "Número de fase"
+#: models.py:43
+msgid "Scope"
+msgstr "Ámbito"
 
-#: models.py:60
-msgid "X Scale"
-msgstr "Escala X"
+#: models.py:45
+msgid "X Values"
+msgstr "Valores X"
 
-#: models.py:62
-msgid "Y Scale"
-msgstr "Escala Y"
+#: models.py:46
+msgid "Y Values"
+msgstr "Valores Y"
 
 #: models.py:68
-msgid "Start"
-msgstr "Comienza"
+msgid "Note div ID"
+msgstr "ID nota"
 
-#: models.py:69
-msgid "End"
-msgstr "Finaliza"
-
-#: models.py:72
-msgid "Phase "
-msgstr "Fase"
-
-#: models.py:83
+#: models.py:70
 msgid "Message"
 msgstr "Mensaje"
 
-#: models.py:84
-msgid "Explanation"
-msgstr "Explicación"
+#: models.py:71
+msgid "Parent TD or DIV"
+msgstr "TD o DIV padre"
 
-#: models.py:86
-msgid "Coordinates"
-msgstr "Coordenadas"
+#: templates/debate/debate_add.html:4 templates/debate/debate_board.html:4
+msgid "Create new debate"
+msgstr "Crear nuevo debate"
 
-#: templates/debate/debate_add.html:4
-msgid "Create new space"
-msgstr "Crear nuevo espacio"
+#: templates/debate/debate_add.html:16 templates/debate/debate_board.html:16
+msgid "Create a new debate"
+msgstr "Crear un nuevo debate"
 
-#: templates/debate/debate_add.html:12
-msgid "Create a new space"
-msgstr "Crear un nuevo espacio"
+#: templates/debate/debate_add.html:23 templates/debate/debate_board.html:23
+msgid "Remove column"
+msgstr "Eliminar columna"
 
-#: templates/debate/debate_add.html:37
-msgid "Add new phase"
-msgstr "Crear nueva fase"
+#: templates/debate/debate_add.html:24 templates/debate/debate_board.html:24
+msgid "Add column"
+msgstr "Añadir columna"
 
-#: templates/debate/debate_add.html:38
-msgid "Phase"
-msgstr "Fase"
+#: templates/debate/debate_add.html:48 templates/debate/debate_board.html:56
+msgid "Remove row"
+msgstr "Eliminar fila"
 
-#: templates/debate/debate_add.html:39
-msgid "Finish"
-msgstr "Finalizar"
+#: templates/debate/debate_add.html:49 templates/debate/debate_board.html:57
+msgid "Add row"
+msgstr "Añadir fila"
 
-#: templates/debate/debate_add.html:56
-msgid "How to add new debates"
-msgstr "Cómo añadir nuevos debates"
+#: templates/debate/debate_add.html:52 templates/debate/debate_board.html:66
+msgid "Other debate data"
+msgstr "Otros datos del debate"
 
-#: templates/debate/debate_add.html:58
-msgid "Modules"
-msgstr "Módulos"
+#: templates/debate/debate_add.html:95 templates/debate/debate_board.html:109
+msgid "Save"
+msgstr "Guardar"
+
+#: templates/debate/debate_add.html:96 templates/debate/debate_board.html:110
+msgid "Cancel"
+msgstr "Cancelar"
+
+#: templates/debate/debate_board.html:61
+msgid "Add new note"
+msgstr "Añadir nota"
+
+#: templates/debate/debate_board.html:62
+msgid "Add phase"
+msgstr "Añadir fase"
