--- a/src/e_cidadania/apps/staticpages/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/staticpages/locale/es_ES/LC_MESSAGES/django.po
@@ -6,12 +6,12 @@
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: e-cidadania 0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-07-26 17:46+0200\n"
-"PO-Revision-Date: 2011-07-27 11:44\n"
-"Last-Translator:   <a@a.com>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"POT-Creation-Date: 2011-10-10 09:34+0200\n"
+"PO-Revision-Date: 2011-10-10 10:17\n"
+"Last-Translator: <oscar.carballal@cidadania.coop>\n"
+"Language-Team: Spanish Team <ecidadania-es@freelists.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -47,10 +47,14 @@ msgid "Author"
 msgstr "Autor"
 
 #: models.py:37
+msgid "Last update"
+msgstr "Última actualización"
+
+#: models.py:38
 msgid "Order"
 msgstr "Orden"
 
-#: models.py:41
+#: models.py:42
 msgid "Static Pages"
 msgstr "Páginas estáticas"
 
@@ -59,9 +63,5 @@ msgid "Go back"
 msgstr "Volver"
 
 #: templates/staticpages/staticpages_index.html:14
-msgid "created"
-msgstr "creado"
-
-#: templates/staticpages/staticpages_index.html:14
-msgid "by"
-msgstr "por"
+msgid "last updated"
+msgstr "última actualización"
